<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="30dp"
    app:cardBackgroundColor="#F8F5F5"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linear_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <LinearLayout
            android:id="@+id/title_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="7dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp">
            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:src="@drawable/ic_baseline_close_24"/>
            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

            <TextView
                android:id="@+id/text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/filter_options"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginStart="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                app:cornerRadius="15dp"
                android:layout_marginEnd="15dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/brand"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/spinner_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Brand"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:text="@string/prise"/>

        <Spinner
            android:id="@+id/spinner_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/Price"/>
        <TextView
            android:id="@+id/text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:text="@string/size"/>

        <Spinner
            android:id="@+id/spinner_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Size"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>

