<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_my_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"/>
        <TextView
            android:id="@+id/text_view_add_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_address"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="240dp"/>
        <ImageButton
            android:id="@+id/button_add_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF6E4E"
            android:src="@drawable/ic_baseline_location_on_24"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text_view_my_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_cart"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_my_cart"
        android:paddingStart="40dp"
        android:layout_marginTop="20dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_my_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_my_cart"
        app:cardBackgroundColor="#010035"
        android:layout_margin="5dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:id="@+id/linear_for_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_weight="2"
                android:id="@+id/rv_my_cart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="12dp"/>

            <View
                android:id="@+id/view_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#40FFFFFF"/>

            <LinearLayout
                android:id="@+id/linear_text_total_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/linear_text_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/total"
                    android:textSize="17sp"
                   />
                <TextView
                    android:id="@+id/linear_text_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="@string/_6_000us"
                    android:textSize="17sp"
                    android:gravity="end"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_text_total_delivery_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/linear_text_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/delivery"
                    android:textSize="17sp"
                   />
                <TextView
                    android:id="@+id/linear_text_free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="Free"
                    android:textSize="17sp"
                    android:gravity="end"

                    />
            </LinearLayout>
            <View
                android:id="@+id/view_line_teo"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#33FFFFFF"
                android:layout_marginTop="5dp"/>
            <Button
                android:id="@+id/button_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Checkout"
                android:layout_margin="30dp"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>