<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_image_switcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardCornerRadius="40dp"
            android:layout_gravity="center"
           android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp">

            <ImageSwitcher

                android:id="@+id/image_switcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fadeScrollbars="true">

                <ImageView
                    android:id="@+id/image_view_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img"/>
            </ImageSwitcher>





        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardCornerRadius="40dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:id="@+id/linear_details_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <LinearLayout
                    android:id="@+id/linear_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_title"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:text="@string/galaxy_note_20_ultra"/>

                    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:cardCornerRadius="10dp"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/check_favorites"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:checked="false"
                            android:background="@color/black"
                            app:useMaterialThemeColors="false"
                            android:button="@drawable/custom_checkbox"/>
                    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
                </LinearLayout>

                <RatingBar
                    android:id="@+id/rating_bar"
                    android:theme="@style/MyRatingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="5"

                    />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:tabRippleColor="@null"
                    app:tabGravity="center"
                    app:tabMode="scrollable"/>
                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/details_phone_container"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
                   />

                <LinearLayout
                    android:id="@+id/linear_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_one"
                        android:layout_weight="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_sim_card_24"/>
                    <ImageView
                        android:id="@+id/img_two"
                        android:layout_weight="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_memory_24"/>
                    <ImageView
                        android:layout_weight="2"
                        android:id="@+id/img_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_sd_card_24"/>
                    <ImageView
                        android:layout_weight="2"
                        android:id="@+id/img_fore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_camera_alt_24"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/text_view_color_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/select_color_and_capacity"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:id="@+id/linear_selector_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:cardCornerRadius="50dp"
>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/check_color_one"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:checked="false"
                            android:background="#772D03"
                            app:useMaterialThemeColors="false"
                            android:button="@drawable/color_one_selected"/>
                    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

                    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:cardCornerRadius="50dp"
                        android:layout_marginStart="10dp">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/check_color_two"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:checked="false"
                            android:background="#010035"
                            app:useMaterialThemeColors="false"
                            android:button="@drawable/color_two_selected"/>
                    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/button_128"
                        android:layout_marginStart="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/_128_gb"
                        android:checkable="true"
                        app:rippleColor="#FF6E4E"
                        app:chipBackgroundColor="@color/chip_color"/>
                    <com.google.android.material.chip.Chip
                        android:id="@+id/button_256"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/_256_gb"
                        android:checkable="true"
                        app:rippleColor="#FF6E4E"
                        app:chipBackgroundColor="@color/chip_color"
                        />

                </LinearLayout>

                <com.google.android.material.chip.Chip
                    android:id="@+id/button_buy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/add_to_card_1_500_00"
                    app:chipBackgroundColor="#FF6E4E"
                    android:textColor="@color/white"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>